# advent-of-code-2024

./: .envrc  .gitignore  Cargo.toml  aoc  deno.json  flake.nix
.zed/: settings.json
cli/: mod.ts  secrets.ts
day1/: part1.nix  part1.ts  part2.nix  part2.ts
day10/: part1.kts  part2.kts
day11/: part1.kts  part2.rs
day12/: part1.rs  part2.rs
day13/: part1.kts  part1.nix  part2.kts  part2.nix
day14/: part1.rs  part2.rs
day15/: part1.rs  part2.rs
day17/: part1.rs  part2.rs
day18/: part1.kts  part2.kts
day19/: part1.ts  part2.ts
day2/: part1.ts  part2.ts
day20/: part1.rs  part2.rs
day22/: part1.rs  part2.rs
day23/: part1.rs  part2.rs
day24/: part1.rs  part2.rs
day3/: part1.ts  part2.ts
day4/: part1.ts  part2.ts
day5/: part1.ts  part2.ts
day6/: part1.kts  part2-optimized.kts  part2.kts
day7/: part1.kts  part2.kts
day8/: part1.kts  part2.kts
day9/: part1.kts  part2.kts
entrypoints/: deno.bench.ts  deno.ts
entrypoints/kotlin/: build.gradle.kts
entrypoints/kotlin/src/main/kotlin/: Main.kt
scripts/: aoc
