[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "d11p2"
path = "day11/part2.rs"

[[bin]]
name = "d12p1"
path = "day12/part1.rs"

[[bin]]
name = "d12p2"
path = "day12/part2.rs"

[[bin]]
name = "d14p1"
path = "day14/part1.rs"

[[bin]]
name = "d14p2"
path = "day14/part2.rs"
