[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
num-derive = "0.4.2"
num-traits = "0.2.19"

[[bin]]
name = "d11p2"
path = "day11/part2.rs"

[[bin]]
name = "d12p1"
path = "day12/part1.rs"

[[bin]]
name = "d12p2"
path = "day12/part2.rs"

[[bin]]
name = "d14p1"
path = "day14/part1.rs"

[[bin]]
name = "d14p2"
path = "day14/part2.rs"

[[bin]]
name = "d15p1"
path = "day15/part1.rs"

[[bin]]
name = "d15p2"
path = "day15/part2.rs"

[[bin]]
name = "d17p1"
path = "day17/part1.rs"

[[bin]]
name = "d17p2"
path = "day17/part2.rs"

[[bin]]
name = "d20p1"
path = "day20/part1.rs"

[[bin]]
name = "d20p2"
path = "day20/part2.rs"

[[bin]]
name = "d22p1"
path = "day22/part1.rs"

[[bin]]
name = "d22p2"
path = "day22/part2.rs"

[[bin]]
name = "d23p1"
path = "day23/part1.rs"

[[bin]]
name = "d23p2"
path = "day23/part2.rs"

[[bin]]
name = "d24p1"
path = "day24/part1.rs"

[[bin]]
name = "d24p2"
path = "day24/part2.rs"
